<resources>
    <string name="app_name">FaceRecognition</string>
    <string name="trackIntroduction">人像跟踪\n\t\t\t是指利用人像捕获技术，当指定的人像在\n摄像头拍摄的范围内移动时自动地对其进行跟\n踪。\n\t\t\t现在请将摄像头对准人，并开启摄像头，我\n们将能够对人像进行跟踪。</string>
    <string name="searchIntroduction">人脸搜索\n\t\t\t是对指定的人像进行建模，并与数\n据库中的人脸相对比，最终返回五张最\n相似的人脸。</string>
    <string name="liveDetectIntroduction">活体检测\n\t\t\t是对指定的人像进行建模，并与数据库\n中的人脸相对比，最终返回五张最相似的人\n脸。\n\t\t\t现在请将镜头对准人，并开启摄像头，\n我们即将进行拍摄。</string>
    <string name="addPhoto">添加图片</string>
    <string name="extract">人像提取</string>
    <string name="compare">进行比对</string>
    <string name="saveImage">保存图片</string>
    <string name="keepMode">继续建模</string>
    <string name="startCamera">开始拍摄！</string>
    <string name="searchResult">搜索结果为：</string>
    <string name="lch_intro">林成虹\n项目&#038;技术经理\n手机号码:\n17858964357\n电子邮箱:\n690060189@qq.com</string>
    <string name="lzx_intro">林紫秀\nWeb前端开发&#038;测试工程师\n手机号码:\n17858964360\n电子邮箱:\n1627952745@qq.com</string>
    <string name="cy_intro">陈彧\nUI设计组组长&#038;技术文档工程师\n手机号码:\n17858964376\n电子邮箱:\n769990323@qq.com</string>
    <string name="cza_intro">陈子安\n客户关系经理&#038;Web后端开发工程师\n手机号码:\n17858964376\n电子邮箱:\n547272703@qq.com</string>
    <string name="zdf_intro">周垤飞\nAndroid端开发&#038;测试工程师\n手机号码:\n17857090972\n电子邮箱:\n369135912@qq.com</string>
</resources>
