<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:background="#F5F5F5">
    <view.TitleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        custom:title="About Us"
        custom:backButtonVisible="false"
        >
    </view.TitleLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/lch"
                        android:layout_margin="10dp"/>

                    <View
                        android:layout_width="10px"
                        android:layout_height="fill_parent"
                        android:background="#03a9f4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/lch_intro"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/lzx_intro"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"/>

                    <View
                        android:layout_width="10px"
                        android:layout_height="fill_parent"
                        android:background="#03a9f4" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/lzx"
                        android:layout_margin="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/dcy"
                        android:layout_margin="10dp"/>

                    <View
                        android:layout_width="10px"
                        android:layout_height="fill_parent"
                        android:background="#03a9f4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/cy_intro"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/cza_intro"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"/>

                    <View
                        android:layout_width="10px"
                        android:layout_height="fill_parent"
                        android:background="#03a9f4" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/cza"
                        android:layout_margin="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/zdf"
                        android:layout_margin="10dp"/>

                    <View
                        android:layout_width="10px"
                        android:layout_height="fill_parent"
                        android:background="#03a9f4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/zdf_intro"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>
